--- a/public/HTML/home.html
+++ b/public/HTML/home.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OddsAgora - Comparativo de Odds</title>
+    <title>CHECK odds - Comparativo de Odds</title>
     <link rel="stylesheet" href="/public/css/home.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-    <!-- Header -->
     <header class="header">
         <div class="header-top">
             <div class="header-info">
@@ -22,8 +21,7 @@
         
         <div class="header-main">
             <div class="logo">
-                <i class="fas fa-chart-line"></i>
-                <span>OddsAgora</span>
+                <img src="check_odds_logo.png" alt="CHECK odds Logo" class="logo-img">
             </div>
             
             <nav class="main-nav">
@@ -59,7 +57,6 @@
     </header>
 
     <div class="container">
-        <!-- Sidebar -->
         <aside class="sidebar">
             <div class="my-leagues">
                 <div class="section-header">
@@ -111,9 +108,7 @@
             </div>
         </aside>
 
-        <!-- Main Content -->
         <main class="main-content">
-            <!-- Promo Cards -->
             <div class="promo-section">
                 <div class="promo-card f12">
                     <div class="promo-header">
@@ -150,7 +145,6 @@
                 </div>
             </div>
 
-            <!-- My Ticket Section -->
             <div class="my-ticket">
                 <div class="ticket-header">
                     <i class="fas fa-ticket-alt"></i>
@@ -158,12 +152,11 @@
                     <span class="badge">0</span>
                 </div>
                 <div class="ticket-content">
-                    <p>Nenhuma aposta selecionada ainda. Para adicionar uma aposta, clique nas odds enquanto navega no OddsAgora!</p>
+                    <p>Nenhuma aposta selecionada ainda. Para adicionar uma aposta, clique nas odds enquanto navega no CHECK odds!</p>
                     <a href="#" class="login-link">Faça login para salvar e compartilhar seus cupons.</a>
                 </div>
             </div>
 
-            <!-- Matches Section -->
             <div class="matches-section">
                 <div class="section-tabs">
                     <button class="tab-btn active">Partidas quentes</button>
@@ -267,7 +260,6 @@
                 </div>
             </div>
 
-            <!-- Main Events -->
             <div class="main-events">
                 <div class="section-header">
                     <span>Eventos Principais</span>
@@ -306,7 +298,6 @@
                 <a href="#" class="view-all-link">Todos os eventos</a>
             </div>
 
-            <!-- Upcoming Matches -->
             <div class="upcoming-matches">
                 <div class="section-header">
                     <span>Próximas partidas</span>
